[gd_scene load_steps=4 format=3 uid="uid://tfkbwj413ywp"]

[ext_resource type="Texture2D" uid="uid://2xpj74ysuet8" path="res://Texture/Cur_Grab2.png" id="1_cfom6"]
[ext_resource type="Script" uid="uid://bcm5bdc8fit87" path="res://ui/player_ui.gd" id="1_ehg4m"]
[ext_resource type="PackedScene" uid="uid://c38ofq4se5pcb" path="res://ui/pause_menu.tscn" id="3_iwa1g"]

[node name="player_ui" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ehg4m")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="crosshair" type="CenterContainer" parent="CanvasLayer"]
offset_right = 576.0
offset_bottom = 335.0

[node name="crosshairex" type="TextureRect" parent="CanvasLayer/crosshair"]
layout_mode = 2
texture = ExtResource("1_cfom6")

[node name="pause_menu" parent="." instance=ExtResource("3_iwa1g")]

[connection signal="pressed" from="pause_menu/resume" to="." method="resume_game"]
[connection signal="pressed" from="pause_menu/quit" to="." method="quit_game"]

[editable path="pause_menu"]
